Initial commit-baseline

--- a/project_mine/Mine/Mine.iOS/Mine.iOS.csproj
+++ b/project_mine/Mine/Mine.iOS/Mine.iOS.csproj
@@ -133,4 +133,7 @@
       <Name>Mine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\xamarin_logo.png" />
+  </ItemGroup>
 </Project>
