--- a/project_mine/Mine/Mine.Android/Mine.Android.csproj
+++ b/project_mine/Mine/Mine.Android/Mine.Android.csproj
@@ -82,14 +82,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Mine\Mine.csproj">
       <Project>{495298DB-8152-42D2-BEC0-83E358EC2DD4}</Project>
       <Name>Mine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xamarin_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
