--- a/project_mine/Mine/Mine.UWP/Mine.UWP.csproj
+++ b/project_mine/Mine/Mine.UWP/Mine.UWP.csproj
@@ -132,6 +132,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="Properties\Default.rd.xml" />
+    <Content Include="xamarin_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
