--- a/project_mine/Mine/Mine/Mine.csproj
+++ b/project_mine/Mine/Mine/Mine.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Game\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Game\" />
+  </ItemGroup>
 </Project>
